tests/NormalTests/paczka1/small_fuzzy/35148407.err
Error in line 3: AazM6n7x A690 52,5
Error in line 5: pyer A504 57,3
